# salarable-portfolio-lambda-python

./: Dockerfile  README.md  portfolio_preprocessing.py  pyproject.toml  requirements.txt
